--- a/_config.yml
+++ b/_config.yml
@@ -23,16 +23,16 @@ description: 경기과기대 게임동아리
 
 # List of links in the navigation bar
 navbar-links:
-  동아리소개: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
-    - Learn markdown: "http://www.markdowntutorial.com/"
-    - GitHub Pages: "https://pages.github.com/"
-  Author's home: "http://deanattali.com"
+  동아리소개: "aboutgg"
+  동아리 정보:
+    - 회칙: "rule"
+    - 동아리 부원: "http://www.markdowntutorial.com/"
+  시공조아: "https://kr.battle.net/heroes/ko/"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/img/avatar-icon.png"
+# avatar: "/img/avatar-icon.png"
+# 아바타 일단은 쓰지 말자
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
@@ -64,7 +64,7 @@ footer-link-col: "#404040"
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
-  name: Some Person
+  name: GG
 
 # Select your active Social Network Links.
 # Uncomment the links you want to show in the footer and add your information to each link.
@@ -72,10 +72,10 @@ author:
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
   rss: true
-  email: "someone@example.com"
-  facebook: daattali
-  github: daattali
-  twitter: daattali
+  email: "동아리 이메일@example.com"
+  facebook: 동아리 페북
+  github: GG-circle-of-gtec
+  twitter: 동아리 트위터
 #  reddit: yourname
 #  google-plus: +DeanAttali
 #  linkedin: daattali
