--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ navbar-links:
   동아리소개: "aboutgg"
   동아리 정보:
     - 회칙: "rule"
-    - 동아리 부원: "http://www.markdowntutorial.com/"
+    - 동아리 부원: "member"
   시공조아: "https://kr.battle.net/heroes/ko/"
 
 # Image to show in the navigation bar - image must be a square (width = height)
