--- a/_config.yml
+++ b/_config.yml
@@ -23,10 +23,9 @@ description: 경기과기대 게임동아리
 
 # List of links in the navigation bar
 navbar-links:
-  동아리소개: "aboutgg"
-  동아리 정보:
-    - 회칙: "rule"
-    - 동아리 부원: "member"
+  동아리 소개: "aboutgg"
+  동아리 회칙: "rule"
+  동아리 부원: "member"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
@@ -71,11 +70,11 @@ author:
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
   rss: true
-  email: "동아리 이메일@example.com"
-  facebook: 동아리 페북
+  email: "rose6775@naver.com"
+# facebook: 동아리 페북
 # github: GG-circle-of-gtec
 # 코딩동아리도 아닌데 남겨둘 필요 없겠지?
-  twitter: 동아리 트위터
+# twitter: 동아리 트위터
 #  reddit: yourname
 #  google-plus: +DeanAttali
 #  linkedin: daattali
