--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: G.G
+title: GG
 
 # Short description of your site
 description: 경기과기대 게임동아리
