--- a/_config.yml
+++ b/_config.yml
@@ -40,13 +40,13 @@ navbar-links:
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#23cdfd"
+navbar-col: "#8dd5ff"
 navbar-text-col: "#FFFFFF"
-navbar-children-col: "#23cdfd"
+navbar-children-col: "#8dd5ff"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "#23cdfd"
+footer-col: "#8dd5ff"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
 
