--- a/_config.yml
+++ b/_config.yml
@@ -45,10 +45,10 @@ navbar-text-col: "#FFFFFF"
 navbar-children-col: "#8dd5ff"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
-hover-col: "#0085A1"
+hover-col: "#898989"
 footer-col: "#8dd5ff"
-footer-text-col: "#777777"
-footer-link-col: "#404040"
+footer-text-col: "#FFFFFF"
+footer-link-col: "#F5F5F5"
 
 # Alternatively, the navbar, footer, and page background can be set to use background images
 # instead of colour
