--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ link-col: "#008AFF"
 hover-col: "#898989"
 footer-col: "#8dd5ff"
 footer-text-col: "#FFFFFF"
-footer-link-col: "#F5F5F5"
+footer-link-col: "#bbbbbb"
 
 # Alternatively, the navbar, footer, and page background can be set to use background images
 # instead of colour
