--- a/_config.yml
+++ b/_config.yml
@@ -14,10 +14,10 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: GG
+title: Good Game
 
 # Short description of your site
-description: 경기과기대 게임동아리
+description: Circle of GTEC
 
 # --- Navigation bar options --- #
 
