--- a/_config.yml
+++ b/_config.yml
@@ -14,10 +14,10 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: Good Game
+title: G.G
 
 # Short description of your site
-description: Circle of GTEC
+description: Game Circle of GTEC
 
 # --- Navigation bar options --- #
 
