--- a/_config.yml
+++ b/_config.yml
@@ -40,13 +40,13 @@ navbar-links:
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#db9128"
+navbar-col: "#db91e8"
 navbar-text-col: "#FFFFFF"
-navbar-children-col: "#db9128"
+navbar-children-col: "#db91e8"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
 hover-col: "#9fe9ff"
-footer-col: "#db9128"
+footer-col: "#db91e8"
 footer-text-col: "#FFFFFF"
 footer-link-col: "#9fe9ff"
 
