--- a/_config.yml
+++ b/_config.yml
@@ -45,10 +45,10 @@ navbar-text-col: "#FFFFFF"
 navbar-children-col: "#db91e8"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
-hover-col: "#9fe9ff"
+hover-col: "#880852"
 footer-col: "#db91e8"
 footer-text-col: "#FFFFFF"
-footer-link-col: "#9fe9ff"
+footer-link-col: "#880852"
 
 # Alternatively, the navbar, footer, and page background can be set to use background images
 # instead of colour
