--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ navbar-text-col: "#FFFFFF"
 navbar-children-col: "#db91e8"
 page-col: "#FFFFFF"
 link-col: "#008AFF"
-hover-col: "#880852"
+hover-col: "#e6b3ee"
 footer-col: "#db91e8"
 footer-text-col: "#FFFFFF"
 footer-link-col: "#880852"
