--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ social-network-links:
 #  instagram: deanat78
 #  youtube: user/deanat78
 #  spotify: yourname
-#  telephone: +14159998888
+telephone: 01053927791
 #  steam: deanat78
 #  twitch: yourname
 #  yelp: yourname
